<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_ok">OK</string>

    <string name="app_name">Porta Payments</string>
	<string name="done">Done</string>
	<string name="show_qr">Show Code</string>
	<string name="read_qr">Start Scanner</string>
	<string name="other_options">Other options</string>
	<string name="show_code_instructions">The person paying should scan this code.</string>

	<string name="processing_message">The payment is being prepared&#8230;</string>
	<string name="dlg_error_title">An Error Occurred</string>
	<string name="dlg_non_autofocus_title">No Auto-Focus Camera</string>
	<string name="dlg_non_autofocus">Your device does not have an auto-focus camera so you may experience problems scanning requests.</string>
	<string name="error_bad_format">The scanned code could not be understood.</string>
	
	<string name="error_io">An error occurred when talking to PayPal.</string>
	<string name="error_paypal_process">PayPal refused to process the transfer.</string>
	<string name="error_general">An error occurred and your payment could not be processed.</string>
	<string name="error_codegen">A code could not be generated due to an error.</string>
	<string name="error_history_empty">No payment requests have been scanned.</string>
	<string name="menu_about">About</string>
	<string name="menu_settings">Settings</string>
	
	<string name="about_title">PortaPayments</string>
	<string name="about_message">&#169;2010&#8211;2012 Funky Android Ltd., All Rights Reserved.\nIncludes Portions of ZXing which is licensed under the Apache license v2.0.</string>
	<string name="create_qr_quick">Create "Pay-Me" Code</string>
	<string name="create_qr_quick_button_text">Create Payment Request</string>
	<string name="create_qr">Create Multiple-Recipient Code</string>
	<string name="create_qr_button_text">Enter Payment Request Details</string>
	<string name="create_request_instructions">Please enter each recipient and the amount they should receive below;</string>
	<string name="create_image_description">QR Code for payment</string>
	<string name="note_default">Note: Paid using PortaPayments</string>
	<string name="create_total">Total :</string>
	<string name="no_paypalid_dialog_title">Missing Email Address</string>
	<string name="no_paypalid_dialog_message">Please enter the email address you use for PayPal.</string>
	<string name="defaultAmount">1.00</string>
	
	<string name="request_payment">Create Payment Request</string>
	<string name="scan_request">Scan Payment Request</string>

  	<string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
	<string name="msg_default_contents">Contents</string>
	<string name="msg_default_format">Format</string>
    <string name="msg_default_type">Type</string>
	<string name="msg_default_status">Place a code inside the view finder rectangle to scan it.</string>

	<string name="preferences_scanning_title">Scanning Preferences</string>
    <string name="preferences_play_beep_title">Beep</string>
	<string name="preferences_vibrate_title">Vibrate</string>
	
	<string name="preferences_paypal_title">PayPal Details</string>
	<string name="preferences_paypal_username_title">PayPal Email Address</string>
	<string name="preferences_paypal_username_summary">This the email address you log in to PayPal with.</string>
	<string name="preferences_default_currency_title">Currency</string>
	<string name="preferences_default_currency_summary">The currency for transactions.</string>
	
	<string name="view_history_title">History</string>
	<string name="view_history_button_text">Scanned Requests</string>
	<string name="view_scanned_date_title">Date :</string>
	<string name="view_scanned_amount_title">Amount :</string>	
	<string name="view_scanned_recipient_title">Recipient :</string>
	<string name="view_scanned_status_title">Status :</string>
	
	<string name="paypal_error_500000">There is a system error</string>
	<string name="paypal_error_520002">Internal error</string>
	<string name="paypal_error_520003">User name/password is incorrect</string>
	<string name="paypal_error_520005">Merchant account is locked</string>
	<string name="paypal_error_520006">This call is not defined in the database</string>
	<string name="paypal_error_529038">There was an error while making this payment</string>
	<string name="paypal_error_539012">The preapproval key has not been authorized yet</string>
	<string name="paypal_error_539041">The email account is based in a country that is not enabled to receive payments</string>
	<string name="paypal_error_539043">The email account is based in a country that is not enabled to send payments</string>
	<string name="paypal_error_540031">Operation not permitted, credentials do not match initial operations</string>
	<string name="paypal_error_559044">Account setting on the receiver prohibited the payment</string>
	<string name="paypal_error_560027">The argument value is unsupported</string>
	<string name="paypal_error_569000">Split payments are not supported at this time</string>
	<string name="paypal_error_569013">The preapproval key has been canceled</string>
	<string name="paypal_error_569016">Preapproval PIN functionality is not enabled</string>
	<string name="paypal_error_569017">The preapproval key has been suspended</string>
	<string name="paypal_error_569018">Preapproved payments have been disabled</string>
	<string name="paypal_error_569019">The preapproval has been suspended due to too many PIN failures</string>
	<string name="paypal_error_569042">The email account is not confirmed by PayPal</string>
	<string name="paypal_error_579007">The maximum number of receivers exceeded</string>
	<string name="paypal_error_579010">If a preapproval key is specified, the sender’s email address must be, too</string>
	<string name="paypal_error_579014">The preapproval key specifies a different sender than the payment request</string>
	<string name="paypal_error_579017">The amount for the primary receiver must be greater than or equal to the total of other chained receiver amounts</string>
	<string name="paypal_error_579024">The preapproval key cannot be used before the start date or after the end date</string>
	<string name="paypal_error_579025">The preapproval key cannot be used on this weekday</string>
	<string name="paypal_error_579026">The preapproval key cannot be used on this day of the month</string>
	<string name="paypal_error_579027">The preapproval key specifies a different currency than the payment request</string>
	<string name="paypal_error_579028">The payment amount exceeds the maximum amount per payment</string>
	<string name="paypal_error_579030">The number of payments made this period exceeds the maximum number of payments per period</string>
	<string name="paypal_error_579031">The total amount of all payments exceeds the maximum total amount for all payments</string>
	<string name="paypal_error_579033">The sender and each receiver must have different accounts</string>
	<string name="paypal_error_579040">The receivers cannot belong to the same PayPal account</string>
	<string name="paypal_error_579042">The tracking ID already exists and cannot be duplicated</string>
	<string name="paypal_error_579045">The email account exceeds the receiving limit</string>
	<string name="paypal_error_579047">The email account exceeds the purse limit</string>
	<string name="paypal_error_579048">The email account exceeds the sending limit</string>
	<string name="paypal_error_580001">Invalid request. Please check all recipients have entered their email addresses correctly.</string>
	<string name="paypal_error_580023">Invalid request</string>
	<string name="paypal_error_580027">The argument is unsupported</string>
	<string name="paypal_error_580028">A URL is malformed</string>
	<string name="paypal_error_580029">Invalid request</string>
	<string name="paypal_error_589009">This payment cannot be processed because no payment source is available</string>
	<string name="paypal_error_589023">If a fractional amount if rounded due to currency conversion, funds could be lost</string>
	<string name="paypal_error_589039">The email address is invalid. It may not be registered with PayPal</string>
</resources>
