<?xml version="1.0" encoding="utf-8"?>
<ScrollView	xmlns:android="http://schemas.android.com/apk/res/android"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
    		
	<LinearLayout	android:orientation="vertical"
					android:focusable="true"
					android:focusableInTouchMode="true"
	    			android:layout_width="fill_parent"
	    			android:layout_height="wrap_content">
	    			
		<TextView	android:layout_width="fill_parent" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/scan_request"
		    		android:layout_marginTop="10dip"
		    		android:layout_marginBottom="5dip"
		    		android:gravity="center"
		    		android:textColor="#FFFFFF"
		    		android:background="#003366"
		    		android:textSize="6pt"/>
		<Button
			android:id="@+id/read_qr_button"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/read_qr"/>
			
		<TextView	android:layout_width="fill_parent" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/create_qr_quick"
		    		android:gravity="center"
		    		android:layout_marginTop="20dip"
		    		android:layout_marginBottom="5dip"
		    		android:textColor="#FFFFFF"
		    		android:background="#003366"
		    		android:textSize="6pt"/>

		<LinearLayout	android:orientation="horizontal"
		   				android:layout_width="fill_parent"
		   				android:layout_height="wrap_content">
			<EditText	android:id="@+id/amount"
			    		android:layout_width="wrap_content" 
			    		android:layout_height="wrap_content" 
			    		android:layout_gravity="right"
			    		android:layout_weight="1"
			    		android:gravity="right"
			    		android:text="@string/defaultAmount"
						android:inputType="numberDecimal"
						android:imeOptions="actionNext"
			    		android:singleLine="true"/>
			<Button		android:id="@+id/currency"
						android:layout_gravity="right"
		    			android:layout_width="wrap_content" 
		    			android:layout_height="wrap_content"
		    			android:layout_weight="0"/>
		</LinearLayout>
		<EditText	android:id="@+id/note"
		    		android:layout_width="fill_parent" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/note_default"
		    		android:inputType="text"
		    		android:imeOptions="actionDone" 
		    		android:singleLine="true"/>
		<Button		android:id="@+id/create_qr_quick_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/create_qr_quick_button_text"/>

		<TextView	android:layout_width="fill_parent" 
		    		android:layout_height="wrap_content" 
		    		android:text="@string/create_qr"
		    		android:gravity="center"
		    		android:layout_marginTop="20dip"
		    		android:layout_marginBottom="5dip"
		    		android:textColor="#FFFFFF"
		    		android:background="#003366"
		    		android:textSize="6pt"/>
		<Button		android:id="@+id/create_qr_button"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:text="@string/create_qr_button_text"/>

	</LinearLayout>

</ScrollView>
