<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/qr_code_layout"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:gravity="center">
	<TextView	android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:text="@string/show_code_instructions"/>
    <ImageView 	android:id="@+id/qr_code"
        		android:contentDescription="@string/create_image_description"
               	android:layout_width="fill_parent"
               	android:layout_height="0dip"
               	android:layout_weight="1"
               	android:layout_gravity="center_horizontal"
               	android:scaleType="center"/>

	<Button		android:id="@+id/done_button"
         		android:layout_width="fill_parent"
              	android:layout_height="wrap_content"
              	android:layout_gravity="center_horizontal"
              	android:gravity="center"
              	android:text="@string/done"/>
</LinearLayout>
