<?xml version="1.0" encoding="utf-8"?>
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
	   			android:orientation="vertical"
    			android:layout_width="fill_parent"
    			android:layout_height="fill_parent">
	<LinearLayout	android:layout_width="fill_parent"
		  			android:layout_height="wrap_content"
		  			android:orientation="horizontal">
		<TextView	android:textStyle="bold"
					android:gravity="right"
					android:layout_width="0dip"
					android:layout_height="wrap_content"
 					android:layout_weight="1"
	    			android:textSize="10pt"
 					android:text="@string/create_total"/>
		<TextView	android:id="@+id/total"
					android:textStyle="bold"
					android:gravity="right"
	    			android:textSize="10pt"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"/>
	</LinearLayout>
			
	<ScrollView	android:layout_weight="1"
	    		android:layout_width="fill_parent"
	    		android:layout_height="0dip">
	    		
		<LinearLayout	android:orientation="vertical"
			    		android:paddingLeft="5dip"
			    		android:paddingRight="5dip"
		    			android:layout_width="fill_parent"
		    			android:layout_height="wrap_content">
			<EditText	android:id="@+id/note"
			    		android:layout_width="fill_parent" 
			    		android:layout_height="0dip" 
			    		android:inputType="text"
			    		android:layout_weight="1"
			    		android:gravity="left"
			    		android:text="@string/note_default"
			    		android:imeOptions="actionDone" 
			    		android:singleLine="true"/>

			<TextView	android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/create_request_instructions"
						android:paddingTop="5dip"/>

			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_1" />
			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_2" />
			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_3" />
			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_4" />
			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_5" />
			<include	layout="@layout/recipient_block"
			    		android:id="@+id/payment_6" />

			<Button		android:id="@+id/create_button"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/create_qr_quick_button_text"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>	